--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
       transition: transform .20s;
       animation: fadein .40s;
       font: 1.20em/1.62em sans-serif;
+      font-family: Seravek, sans-serif;
     }
     main {
       max-width: 960px;
@@ -26,7 +27,30 @@
       0%   { opacity: 0; transform: translateY(1em); }
       100% { opacity: 1; }
     }
+    /* https://css-tricks.com/overriding-default-button-styles/ */
+    .button {
+      display: inline-block;
+      border: none;
+      padding: 1rem 2rem;
+      margin: 0;
+      text-decoration: none;
+      background: #0069ed;
+      color: #ffffff;
+      font-family: sans-serif;
+      font-size: 1rem;
+      line-height: 1;
+      text-align: center;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+    }
+    .button:disabled {
+      opacity: 0.65;
+    }
+    .button:hover:enabled,
+    .button:focus:enabled {
+      background: #0053ba;
+    }
     </style>
   </head>
-  <body><main>{{ content }}</body>
+  <body><main>{{ content }}</main></body>
 </html>
