--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,15 @@
       background: #0053ba;
     }
     </style>
+    <script src="node_modules/chart.js/dist/Chart.bundle.js"></script>
+    <script src="utils.js"></script>
+    <style>
+      canvas{
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+      }
+    </style>
   </head>
   <body><main>{{ content }}</main></body>
 </html>
